// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicInfo should render with data 1`] = `
<div
  className="pf-l-stack pf-m-gutter"
>
  <div
    className="pf-l-stack__item"
  >
    <div
      className="pf-l-split"
    >
      <div
        className="pf-l-split__item pf-m-fill"
      >
        <h3
          className="pf-c-title pf-m-xl"
        >
          something
        </h3>
      </div>
      <div
        className="pf-l-split__item"
      >
        <a
          className="ins-c-entity-detail__inv-link"
          href="./insights/inventory/some-id"
        >
          Open in Inventory
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`BasicInfo should render with no inv link 1`] = `
<div
  className="pf-l-stack pf-m-gutter"
>
  <div
    className="pf-l-stack__item"
  >
    <div
      className="pf-l-split"
    >
      <div
        className="pf-l-split__item pf-m-fill"
      >
        <h3
          className="pf-c-title pf-m-xl"
        >
          something
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`BasicInfo should render with tags 1`] = `
<div
  className="pf-l-stack pf-m-gutter"
>
  <div
    className="pf-l-stack__item"
  >
    <div
      className="pf-l-split"
    >
      <div
        className="pf-l-split__item pf-m-fill"
      >
        <h3
          className="pf-c-title pf-m-xl"
        >
          something
        </h3>
      </div>
      <div
        className="pf-l-split__item"
      >
        <a
          className="ins-c-entity-detail__inv-link"
          href="./insights/inventory/some-id"
        >
          Open in Inventory
        </a>
      </div>
    </div>
  </div>
  <div
    className="pf-l-stack__item"
  >
    <div
      className="pf-l-split pf-m-gutter"
    >
      <div
        className="pf-l-split__item"
      >
        Tags:
      </div>
      <div
        className="pf-l-split__item"
      >
        <div
          className="pf-c-chip-group"
          data-ouia-component-type="PF4/ChipGroup"
          data-ouia-safe={true}
        >
          <div
            className="pf-c-chip-group__main"
          >
            <ul
              aria-label="Chip group category"
              className="pf-c-chip-group__list"
              role="list"
            >
              <li
                className="pf-c-chip-group__list-item"
                key="0"
              >
                <div
                  className="pf-c-chip"
                  data-ouia-component-id="OUIA-Generated-Chip-1"
                  data-ouia-component-type="PF4/Chip"
                  data-ouia-safe={true}
                >
                  <span
                    className="pf-c-chip__text"
                    id="pf-random-id-1"
                  >
                    one/
                    key
                    =value
                  </span>
                </div>
              </li>
              <li
                className="pf-c-chip-group__list-item"
                key="1"
              >
                <div
                  className="pf-c-chip"
                  data-ouia-component-id="OUIA-Generated-Chip-2"
                  data-ouia-component-type="PF4/Chip"
                  data-ouia-safe={true}
                >
                  <span
                    className="pf-c-chip__text"
                    id="pf-random-id-2"
                  >
                    key
                    =value
                  </span>
                </div>
              </li>
              <li
                className="pf-c-chip-group__list-item"
                key="2"
              >
                <div
                  className="pf-c-chip"
                  data-ouia-component-id="OUIA-Generated-Chip-3"
                  data-ouia-component-type="PF4/Chip"
                  data-ouia-safe={true}
                >
                  <span
                    className="pf-c-chip__text"
                    id="pf-random-id-3"
                  >
                    one/
                    key
                  </span>
                </div>
              </li>
              <li
                className="pf-c-chip-group__list-item"
              >
                <button
                  className="pf-c-chip pf-m-overflow"
                  data-ouia-component-id="OUIA-Generated-Chip-4"
                  data-ouia-component-type="PF4/OverflowChip"
                  data-ouia-safe={true}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="pf-c-chip__text"
                  >
                    1 more
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BasicInfo should render without data 1`] = `
<div
  className="pf-l-stack pf-m-gutter"
>
  <div
    className="pf-l-stack__item"
  >
    <div
      className="pf-l-split"
    >
      <div
        className="pf-l-split__item pf-m-fill"
      >
        <h3
          className="pf-c-title pf-m-xl"
        />
      </div>
      <div
        className="pf-l-split__item"
      >
        <a
          className="ins-c-entity-detail__inv-link"
          href="./insights/inventory/undefined"
        >
          Open in Inventory
        </a>
      </div>
    </div>
  </div>
</div>
`;
